chore: use correct command line flag to export javafx.graphics module for the distribution